# panda-mcp-client

./: LICENSE  README.md  pyproject.toml
src/panda_mcp_client/: get_panda_token.py  panda_mcp_proxy.py
