[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-mcp-client"
version = "0.1.0"
description = "PanDA MCP client: device-flow token helper and stdio MCP proxy with auto-refresh"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.scripts]
get-panda-token = "panda_mcp_client.get_panda_token:main"
panda-mcp-proxy = "panda_mcp_client.panda_mcp_proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/panda_mcp_client"]